add book services, and controller logic, reorganize project files, add sql data, add sql connection info

--- a/library-sys-inven-mgmt/src/main/resources/application.properties
+++ b/library-sys-inven-mgmt/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=library-sys-inven-mgmt
+
+#postgres connection strings
+spring.datasource.url=jdbc:postgresql://localhost:5432/InventoryManagementSystem
+spring.datasource.username=postgres
+spring.datasource.password=${POSTGRES_SUPERUSER_PASSWORD}
+
+#driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#enable colors in terminal
+spring.output.ansi.enabled=always
+
+#default is info
+logging.level.com.skillstorm.springdatajpademo=debug
