Got spring boot app running, added @JsonIgnore appropriately

--- a/library-sys-inven-mgmt/src/main/resources/application.properties
+++ b/library-sys-inven-mgmt/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.application.name=library-sys-inven-mgmt
 #postgres connection strings
 spring.datasource.url=jdbc:postgresql://localhost:5432/InventoryManagementSystem
 spring.datasource.username=postgres
-spring.datasource.password=${POSTGRES_SUPERUSER_PASSWORD}
+spring.datasource.password=Up&@3m!
+
+#force Spring Boot to run the .sql scripts
+spring.sql.init.mode=always
 
 #driver
 spring.datasource.driver-class-name=org.postgresql.Driver
